<resources>
    <string name="app_name">FIRES</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">opened</string>
    <string name="drawer_closed">closed</string>
    <string name="risk_of_fire">Risk of fire</string>
    <string name="fire_level1">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Reduced&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="fire_level2">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Moderate&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="fire_level3">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Elevated&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="fire_level4">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Very Elevated&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="fire_level5">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Maximum&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="n_active_fires">Number of active fires</string>
    <string name="state">State</string>
    <string name="used_means">Used Means</string>
    <string name="operators">Operators</string>
    <string name="land_assets">Land assets</string>
    <string name="aerial_assets">Aerial</string>
    <string name="photograph">Photograph</string>
    <string name="observations">Observations</string>
    <string name="button_map">Button to show fires on map</string>
    <string name="name">Name</string>
    <string name="placeholder_name">John Doe</string>
    <string name="n_cc">Number for Cartão de Cidadão</string>
    <string name="placeholder_n_cc">123456789</string>
    <string name="locale">Location</string>
    <string name="add_photo">Add Photo</string>
    <string name="button_submit">Submit</string>
    <string name="dashboard">Dashboard</string>
    <string name="list_of_fires">List of fires</string>
    <string name="submit_fire">Submit fire registration</string>
    <string name="start_date">Start Date</string>
    <string name="registration">Registration</string>
    <string name="fires">Fires</string>
    <string name="fires_map">Fires | Map</string>
    <string name="button_to_show_list_of_fires">Button to return to list of Fires</string>
    <string name="example_fire_detail">Example Fire Detail</string>
</resources>

