<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_baseline_dashboard_24"
            android:title="@string/dashboard"/>
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_baseline_format_list_bulleted_24"
            android:title="@string/list_of_fires"/>
        <item
            android:id="@+id/nav_resgistration"
            android:icon="@drawable/ic_add_fire"
            android:title="@string/submit_fire"/>

        <!--para avaliação -->
        <item
            android:id="@+id/nav_fire_detial"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/example_fire_detail"/>

    </group>
</menu>