<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.FireRegistrationFragment">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:theme="@style/textColorTheme"
        android:text="@string/name"/>

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/placeholder_name"/>

    <TextView
        android:id="@+id/CC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:theme="@style/textColorTheme"
        android:text="@string/n_cc"/>

    <EditText
        android:id="@+id/CCInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/placeholder_n_cc"/>

    <TextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:theme="@style/textColorTheme"
        android:text="@string/locale"/>

    <EditText
        android:id="@+id/locationInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="123456789"/>

    <Button
        android:id="@+id/addPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:theme="@style/buttonColorTheme"
        android:text="@string/add_photo"/>

    <androidx.constraintlayout.utils.widget.MockView
        android:id="@+id/addedphoto"
        android:layout_width="wrap_content"
        android:layout_height="161dp" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:theme="@style/buttonColorTheme"
        android:text="@string/button_submit"/>

</LinearLayout>