<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.FireDetailFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/textColorTheme"
        android:textStyle="bold"
        android:text="LOCAL: Distrito, Concelho e Freguesia" />

    <TextView
        android:id="@+id/textLocale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:theme="@style/textColorTheme"
        android:text="@string/state" />

    <TextView
        android:id="@+id/textState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/textColorTheme"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/used_means" />

    <LinearLayout
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/custom_border"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/operators"/>

            <androidx.constraintlayout.widget.Placeholder
                android:layout_width="match_parent"
                android:layout_height="100dp"/> <!--Placeholder para gráfico-->

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/custom_border"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/land_assets"/>

            <androidx.constraintlayout.widget.Placeholder
                android:layout_width="match_parent"
                android:layout_height="100dp"/> <!--Placeholder para gráfico-->

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@drawable/custom_border"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/aerial_assets"/>

            <androidx.constraintlayout.widget.Placeholder
                android:layout_width="match_parent"
                android:layout_height="100dp"/> <!--Placeholder para gráfico-->

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/textColorTheme"
        android:textStyle="bold"
        android:text="@string/photograph"/>

    <androidx.constraintlayout.widget.Placeholder
        android:layout_width="wrap_content"
        android:layout_height="116dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:theme="@style/textColorTheme"
        android:text="@string/observations" />

    <TextView
        android:id="@+id/textObs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:theme="@style/textColorTheme"
        android:text="@string/start_date" />

    <TextView
        android:id="@+id/textStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>